[gd_scene load_steps=2 format=3 uid="uid://c4ksradttrvrp"]

[ext_resource type="Script" uid="uid://btofcylhtpekw" path="res://scripts/ui/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSE"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="SaveButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salvar Jogo"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Opções"

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu Principal"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sair do Jogo"
